category page layout

--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -21,9 +21,7 @@
                 </div>
             <% end %>
           </div>
-          <div class="owl-carousel owl-loaded owl-nav-out" data-options='{"items":3,"loop":true,"nav":true}'>
-
-          </div>
+          <div class="gap"></div>
       <% end %>
     </div>
   </div>
